--- a/arch/arm64/boot/dts/amlogic/mesong12a_odroid_common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesong12a_odroid_common.dtsi
@@ -35,7 +35,8 @@
 
 	gpiomem {
 		compatible = "amlogic, gpiomem";
-		reg = <0x0 0xff634000 0x0 0x1000>;
+		reg = <0x0 0xff634000 0x0 0x1000>,	/* GPIO banks */
+			<0x0 0xff800000 0x0 0x1000>;	/* GPIO_AO bank */
 		status = "okay";
 	};
 
