ODROID-C2: Support rtl8821CU driver.
Signed-off-by: Chris KIM <codewalker@hardkernel.com>
Change-Id: I594f4e1ff88a90909562fd2d6432cf0cffb8d9f0

--- a/drivers/amlogic/Makefile
+++ b/drivers/amlogic/Makefile
@@ -117,7 +117,7 @@ ifneq ($(wildcard $(srctree)/../hardware/wifi),)
 	obj-$(CONFIG_RTL8812AU_SDK) += ../../../hardware/wifi/realtek/drivers/rtl8812au/
 endif
 ifneq ($(wildcard $(srctree)/../hardware/wifi),)
-	obj-$(CONFIG_RTL8812AU_SDK) += ../../../hardware/wifi/realtek/drivers/rtl8812au/
+	obj-$(CONFIG_RTL8821CU) += ../../../hardware/wifi/realtek/drivers/rtl8821CU/
 endif
 
 
