--- a/arch/arm64/configs/odroidc2_i2c_defconfig
+++ b/arch/arm64/configs/odroidc2_i2c_defconfig
@@ -1054,6 +1054,7 @@ CONFIG_AM_WIFI=y
 # CONFIG_DHD_USE_STATIC_BUF is not set
 CONFIG_RTL8192CU=m
 CONFIG_RTL8812AU_SDK=m
+CONFIG_RTL8821CU=m
 CONFIG_AML_POWER_RESET=y
 # CONFIG_M8_POWER_RESET is not set
 CONFIG_GXBB_POWER_RESET=y
