--- a/drivers/amlogic/wifi/Kconfig
+++ b/drivers/amlogic/wifi/Kconfig
@@ -25,3 +25,4 @@ endif # AM_WIFI
 
 source "../hardware/wifi/realtek/drivers/8192cu/rtl8xxx_CU/Kconfig"
 source "../hardware/wifi/realtek/drivers/rtl8812au/Kconfig"
+source "../hardware/wifi/realtek/drivers/rtl8821CU/Kconfig"
